调整单页里 tag 位置

--- a/static/css/hugo-pure.css
+++ b/static/css/hugo-pure.css
@@ -259,23 +259,20 @@ pre {
   font-size: 0.875em;
 }
 
-aside#meta {
+.post-meta {
   font-size: 0.875em;
+  text-align: right;
+  padding-top: 5px;
+  line-height: 1.3em;
 }
 
-aside#meta ul {
+.post-meta ul {
   list-style: none;
+  display: inline-block;
   margin: 0px;
-  padding: 0px;
 }
 
-aside#meta li,
-aside#meta li {
+.post-meta li {
   float: left;
-  margin-right: 10px
-}
-
-aside#meta #date {
-  float: right;
-  margin-right: 0px
+  margin-left: 10px
 }
