--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,14 +1,14 @@
 {{ define "main" }}
 <!-- "{{.Content}}" pulls from the markdown content of the corresponding _index.md -->
-{{.Content}}
+{{- .Content -}}
 <ul>
   <!-- Ranges through content/posts/*.md -->
-  {{ range .Pages }}
+  {{- range .Pages -}}
     <li>
       <a href="{{.Permalink}}">{{.Title}}</a>
       <small><i>{{.Date.Format "2006-01-02"}}</i></small>
     </li>
-  {{ end }}
+  {{- end }}
 </ul>
 
 {{ end }}
