--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,25 +1,25 @@
 {{ define "main" }}
-{{ .Content }}
+{{ .Content -}}
 
 <!-- https://www.sidorenko.io/post/2017/07/nice-tagcloud-with-hugo/ -->
-{{ if not (eq (len $.Site.Taxonomies.tags) 0) }}
-  {{ $fontUnit := "rem" }}
-  {{ $largestFontSize := 2.5 }}
-  {{ $smallestFontSize := 1.0 }}
-  {{ $fontSpread := sub $largestFontSize $smallestFontSize }}
-  {{ $max := add (len (index $.Site.Taxonomies.tags.ByCount 0).Pages) 1 }}
-  {{ $min := len (index $.Site.Taxonomies.tags.ByCount.Reverse 0).Pages }}
-  {{ $spread := sub $max $min }}
-  {{ $fontStep := div $fontSpread $spread }}
+{{- if not (eq (len $.Site.Taxonomies.tags) 0) -}}
+  {{- $fontUnit := "rem" -}}
+  {{- $largestFontSize := 2.5 -}}
+  {{- $smallestFontSize := 1.0 -}}
+  {{- $fontSpread := sub $largestFontSize $smallestFontSize -}}
+  {{- $max := add (len (index $.Site.Taxonomies.tags.ByCount 0).Pages) 1 -}}
+  {{- $min := len (index $.Site.Taxonomies.tags.ByCount.Reverse 0).Pages -}}
+  {{- $spread := sub $max $min -}}
+  {{- $fontStep := div $fontSpread $spread -}}
 
   <div id="tag-cloud">
-    {{ range $name, $taxonomy := $.Site.Taxonomies.tags }}
-      {{ $currentTagCount := len $taxonomy.Pages }}
-      {{ $currentFontSize := (add $smallestFontSize (mul (sub $currentTagCount $min) $fontStep) ) }}
+    {{- range $name, $taxonomy := $.Site.Taxonomies.tags -}}
+      {{- $currentTagCount := len $taxonomy.Pages -}}
+      {{- $currentFontSize := (add $smallestFontSize (mul (sub $currentTagCount $min) $fontStep) ) -}}
       <!--Current font size: {{$currentFontSize}}-->
       <a href="{{ "/tags/" | relLangURL }}{{ $name | urlize }}" style="font-size:{{$currentFontSize}}{{$fontUnit}}">{{ $name }}</a>
-    {{ end }}
+    {{- end }}
   </div>
-{{ end }}
+{{- end }}
 
 {{ end }}
